--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -19,6 +19,12 @@ button {
   font-size: 1rem;
 }
 
+a {
+  color: cornflowerblue;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
 label {
   display: block;
 }
