--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -38,6 +38,14 @@ textarea {
   margin-bottom: 1rem;
 }
 
+.text-left {
+  text-align: left;
+}
+
 .text-right {
   text-align: right;
+}
+
+.text-center {
+  text-align: center;
 }
